--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
       <p>&nbsp;</p>
       <p>
         <md-form-field fxFlex="100%">
-          <input #email_address mdInput class="form-control" required minlength="10" name="email_address"
+          <input #email_address mdInput required minlength="10" name="email_address"
                  placeholder="Email Address">
           <!-- div *ngIf="email_address.errors && (email_address.dirty || email_address.touched)" color="warn">
             <div *ngIf="email_address.errors.required">
