--- a/src/app/diagram-editor/diagram-editor.component.html
+++ b/src/app/diagram-editor/diagram-editor.component.html
@@ -1,4 +1,4 @@
-<div class="diagramsPanel">
-  <div #paletteDiv class="paletteDiv"></div>
-  <div #diagramDiv class="diagramDiv"></div>
+<div fxLayout fxLayoutAlign="center" fxLayoutGap="0px" fxLayoutGap.xs="0">
+  <div fxFlex="20" #paletteDiv class="paletteDiv"></div>
+  <div fxFlex="80" #diagramDiv class="diagramDiv"></div>
 </div>
