--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,14 @@
 <div fxLayout fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
 
-  <div fxFlex="15">
-    <form [formGroup]="homeForm" (ngSubmit)="onSubmit()">
-      <p>&nbsp;</p>
-    </form>
-  </div>
-
-  <div fxFlex="70">
+  <div fxFlex="10">
     <p>&nbsp;</p>
-    <iframe width="100%" height="600"
-            src="/app/fastlink"
-            frameborder="0"
-            style="border: 1px solid #efefef">
-    </iframe>
   </div>
 
-  <div fxFlex="15">
+  <div fxFlex="80">
+    <p>HOME</p>
   </div>
-</div>  
+
+  <div fxFlex="10">
+  </div>
+</div>
 
